Fixes broken layout for .input-group-addons within .input-large. Follows 6ce154c7ed64f3821cc7d6cbb0bfcf65b25f1b49

--- a/less/variables.less
+++ b/less/variables.less
@@ -128,7 +128,7 @@
 @input-color-placeholder:        @gray-light;
 
 @input-height-base:              (@line-height-computed + (@padding-base-vertical * 2) + 2);
-@input-height-large:             (@line-height-computed + (@padding-large-vertical * 2) + 2);
+@input-height-large:             (@line-height-computed + (@padding-large-vertical * 2) + 8);
 @input-height-small:             (@line-height-computed + (@padding-small-vertical * 2) + 2);
 
 
